staticpage and home  pages

--- a/public/assets/scss/theme/_style.scss
+++ b/public/assets/scss/theme/_style.scss
@@ -1652,7 +1652,7 @@ header {
     display: inline-block;
     // padding-top: 35px;
     // padding-bottom: 35px;
-    width: 200px;
+    // width: 200px;
   }
 
   .menu-left {
