--- a/public/assets/scss/theme/_dark.scss
+++ b/public/assets/scss/theme/_dark.scss
@@ -2345,6 +2345,9 @@ body {
         }
       }
   
+      .custom-load{
+        background-color: #404040;
+      }
       .typo-content {
         &.heading_content {
           h1,
