--- a/public/assets/scss/theme/_style.scss
+++ b/public/assets/scss/theme/_style.scss
@@ -12160,7 +12160,7 @@ footer {
       display: block;
     }
 
-    .product-details {
+    .p {
       position: relative;
 
       .color-variant {
