new change in the list price method changes, contact style changed

--- a/public/assets/scss/theme/_style.scss
+++ b/public/assets/scss/theme/_style.scss
@@ -13627,7 +13627,7 @@ footer {
       right: 30px;
 
       &:before {
-        color: white;
+        color: #ff4c3b;
         opacity: 1;
         font-size: 25px;
       }
@@ -13637,7 +13637,7 @@ footer {
       right: 6px;
 
       &:before {
-        color: white;
+        color:  #ff4c3b;
         opacity: 1;
         font-size: 25px;
       }
