header changes + product pge font

--- a/.serverless_nextjs/assets/public/assets/scss/theme/_menu.scss
+++ b/.serverless_nextjs/assets/public/assets/scss/theme/_menu.scss
@@ -2038,9 +2038,7 @@ header{
   }
 }
 @media (max-width:577px) {
-  .top-header {
-    height: 0;
-  }
+
   .main-nav-center {
     .toggle-nav {
       right: 15px;
@@ -2078,12 +2076,12 @@ header{
   .top-header {
     .header-dropdown {
       .mobile-account, .mobile-wishlist{
-        position: fixed;
-        bottom: 20px;
-        right: 30%;
-        font-size: 0;
-        padding: 0;
-        z-index: 9;
+        // position: fixed;
+        // bottom: 20px;
+        // right: 30%;
+        // font-size: 0;
+        // padding: 0;
+        // z-index: 9;
         i {
           font-size: 22px;
           font-family: $font-awesome;
