--- a/components/headers/Header-one.module.css
+++ b/components/headers/Header-one.module.css
@@ -1,75 +1,90 @@
 @media (min-width: 768px) {
-    .mobileHeader {
-        display: none;
-    }
+  .mobileHeader {
+    display: none;
+  }
 }
 @media (max-width: 768px) {
-    .desktopHeader {
-        display: none;
-    }
+  .desktopHeader {
+    display: none;
+  }
 }
 
 .burgerMenu {
-    font-size: 18px!important;
+  font-size: 18px !important;
 }
 @media (min-width: 768px) {
-    .logoParent {
-        max-width: 100px;
-        height: auto;
-    }
-    .burgerMenuParent {
-        width: 50px;
-    }
-    .searchMobile {
-        display: none;
-    }
-    .desktopButton {
-        padding: 13px 29px;
-        color: #ffffff !important;
-        letter-spacing: 0.05em;
-        border: 2px solid var(--theme-deafult);
-        background-image: linear-gradient( 30deg, var(--theme-deafult) 50%, transparent 50%);
-        background-size: 540px;
-        background-repeat: no-repeat;
-        background-position: 0;
-        transition: background 300ms ease-in-out; 
-        line-height: 20px;
-        text-transform: uppercase;
-        font-size: 14px;
-        font-weight: 700;
-    }
+  .logoParent {
+    max-width: 100px;
+    height: auto;
+  }
+  .burgerMenuParent {
+    width: 50px;
+  }
+  .searchMobile {
+    display: none;
+  }
+  .desktopButton {
+    padding: 13px 29px;
+    color: #ffffff !important;
+    letter-spacing: 0.05em;
+    border: 2px solid var(--theme-deafult);
+    background-image: linear-gradient(
+      30deg,
+      var(--theme-deafult) 50%,
+      transparent 50%
+    );
+    background-size: 540px;
+    background-repeat: no-repeat;
+    background-position: 0;
+    transition: background 300ms ease-in-out;
+    line-height: 20px;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+  }
 }
 
 @media (max-width: 768px) {
-    .logoParent {
-        max-width: 80px;
-        height: auto;
-    }
-    .burgerMenuParent {
-        width: 30px;
-    }
-    .searchDesktop {
-        display: none;
-    }
-    .mobileButton {
-        padding: 13px 0px;
-        color: #ffffff !important;
-        letter-spacing: 0.05em;
-        border: 2px solid var(--theme-deafult);
-        background-image: linear-gradient( 30deg, var(--theme-deafult) 50%, transparent 50%);
-        background-size: 540px;
-        background-repeat: no-repeat;
-        background-position: 0;
-        transition: background 300ms ease-in-out;
-    }
-    .searchIcon {
-        padding-left: 10px;
-    }
-    .inputContainer {
-        font-size: 14px!important;
-    }
+  .logoParent {
+    max-width: 80px;
+    height: auto;
+  }
+  .burgerMenuParent {
+    width: 30px;
+  }
+  .searchDesktop {
+    display: none;
+  }
+  .mobileButton {
+    padding: 13px 0px;
+    color: #ffffff !important;
+    letter-spacing: 0.05em;
+    border: 2px solid var(--theme-deafult);
+    background-image: linear-gradient(
+      30deg,
+      var(--theme-deafult) 50%,
+      transparent 50%
+    );
+    background-size: 540px;
+    background-repeat: no-repeat;
+    background-position: 0;
+    transition: background 300ms ease-in-out;
+  }
+  .searchIcon {
+    padding-left: 10px;
+  }
+  .inputContainer {
+    font-size: 14px !important;
+  }
+  .customSizingAcc {
+    padding: 0;
+    margin-right: 30px;
+  }
+  .fullSizeContainer {
+    width: 100%;
+  }
 }
 
 .inputContainer {
-    padding: 0 0 0 10px!important;
+  padding: 0 0 0 10px !important;
 }
