--- a/components/containers/CartContainer.module.css
+++ b/components/containers/CartContainer.module.css
@@ -1,14 +1,15 @@
-
 @media (min-width: 768px) {
-   .shoppingCart {
-       display: none;
-   }
+  .shoppingCart {
+    display: none;
   }
-  @media (max-width: 768px) {
-    .imageContainer {
-        display: none;
-    }
-    .shoppingCart {
-        margin-top: 20px;
-    }
-   }
+}
+@media (max-width: 768px) {
+  .imageContainer,
+  .mobilePopUpBlock {
+    display: none;
+  }
+  .shoppingCart {
+    margin-top: 20px;
+    font-size: 20px;
+  }
+}
