--- a/public/assets/scss/theme/_style.scss
+++ b/public/assets/scss/theme/_style.scss
@@ -10346,8 +10346,8 @@ footer {
 
 .collection-product-wrapper {
   .product-top-filter {
-    border-bottom: 1px solid lighten($black, 86.5%);
-    border-top: 1px solid lighten($black, 86.5%);
+    // border-bottom: 1px solid lighten($black, 86.5%);
+    // border-top: 1px solid lighten($black, 86.5%);
 
     .product-filter-content,
     .popup-filter {
