--- a/public/assets/css/MasterControl.css
+++ b/public/assets/css/MasterControl.css
@@ -11,6 +11,10 @@
     font-weight: 600;
 }
 
+.border-product{
+    text-align: left;
+}
+
 .categoreCollection:hover{
     border: 2px solid #ff4c3b;
 }
