--- a/public/assets/css/MasterControl.css
+++ b/public/assets/css/MasterControl.css
@@ -53,6 +53,7 @@ font-weight: 500;
 padding: 15px;
 font-variant: stacked-fractions;
 height: 96%;
+font-weight: bolder;
 }
 .priceStyle{
     color: black;
