--- a/public/assets/css/MasterControl.css
+++ b/public/assets/css/MasterControl.css
@@ -137,7 +137,7 @@ border:1px solid yellow;
 }
 .card-price {
 	display: inline-block;
-    margin-bottom: -2px !important;
+    margin-bottom: 10px !important;
   width: auto;
 	height: 38px;
 	
@@ -163,7 +163,6 @@ border:1px solid yellow;
 
 .card-price-STW{
 	display: inline-block;
-    margin-bottom: 10px !important;
   width: auto;
 	height: 38px;
 	
@@ -186,6 +185,15 @@ border:1px solid yellow;
 
 	padding: 0 10px 0 10px;
 }
+
+.card-price-STW-margin{
+    margin-bottom: -2px !important;
+}
+.card-price-STW-margin1{
+    margin-bottom: 11px !important;
+}
+
+
 .tagPrice{
 margin-top: 10px;
     color: black;
