new changes for mobile.

--- a/public/assets/css/MasterControl.css
+++ b/public/assets/css/MasterControl.css
@@ -134,6 +134,10 @@ border:1px solid yellow;
     /* display: flex; */
     align-items: flex-end;
 }
+.text-center
+{
+    text-align: center;
+}
 .priceTagDetail{
     color: black;
     font-size: 11.5px !important;
