--- a/public/assets/scss/theme/_style.scss
+++ b/public/assets/scss/theme/_style.scss
@@ -11528,7 +11528,11 @@ footer {
   //  var(--theme-deafult);
   font-weight: 700;
 }
-
+.instock-cls-red {
+  color:red;
+  //  var(--theme-deafult);
+  font-weight: 700;
+}
 .product-slick,
 .rtl-product-slick,
 .product-right-slick,
