--- a/public/assets/scss/theme/_style.scss
+++ b/public/assets/scss/theme/_style.scss
@@ -2033,7 +2033,7 @@ header {
 
     @for $i from 1 through 56 {
       &.home#{$i} {
-        background-image: url("#{$assetspath}/home-banner/#{$i}.jpg");
+        background-image: url("#{$assetspath}/home-banner/#{$i}.webp");
       }
     }
   }
