--- a/public/assets/css/MasterControl.css
+++ b/public/assets/css/MasterControl.css
@@ -45,6 +45,26 @@
     border: 2px solid #ff4c3b;
 }
 
+.stw-close{
+    position: absolute;
+    top: -9px;
+    right: 0;
+    font-size: 21px !important;
+    width: 10px !important;
+    color: red !important;
+}
+.swt-cartTextcontainer{
+    text-align: justify;
+    padding-top: 6px;
+    font-weight: bolder;
+}
+.swt-cartcontainer{
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 4px 4px 8px 2px #ACACAC;
+}
+
 .categoreCollection:active{
     border: 2px solid #ffffff;
     background-color: red;
